style: mudança nas cores

--- a/seice/core/templates/pedagogia-seice.html
+++ b/seice/core/templates/pedagogia-seice.html
@@ -11,8 +11,8 @@
     <style>
         :root {
             --primary-color: #4a5568;
-            --primary-light: #718096;
-            --primary-dark: #2d3748;
+            --primary-light: #000000;
+            --primary-dark: #010711;
             --accent-color: #f6e05e;
             --accent-light: #faf089;
             --accent-dark: #d69e2e;
@@ -29,9 +29,9 @@
             --gray-400: #cbd5e0;
             --gray-500: #a0aec0;
             --gray-600: #718096;
-            --gray-700: #4a5568;
-            --gray-800: #2d3748;
-            --gray-900: #1a202c;
+            --gray-700: #000000;
+            --gray-800: #000000;
+            --gray-900: #000205;
             --text-color: var(--gray-800);
             --text-light: var(--gray-600);
             --bg-color: var(--gray-50);
